//
//  AccessibilitiyIdentifiers.swift
//  CurrencyExchanger
//
//  Created by Mradul Kumar on 16/09/24.
//

import Foundation

struct AccessibilitiyIdentifiers {
    //Exhcange List View
    static let amountTextField = "amountTextField"
    static let currencySelectionButton = "currencySelectionButton"
    static let currencyListScrollView = "currencyListScrollView"
    static let currencyConversionScrollView = "currencyConversionScrollView"
    
    //LoadingView
    static let loadingView = "loadingView"
    
    //No Internet View
    static let noInternetView = "noInternetView"
    static let noInternetMessage = "noInternetMessage"
    static let noInternetRefreshButton = "noInternetRefreshButton"
    
    //loading indicator
    static let loadingIndicator = "loadingIndicator"
    
    //Buttons - Currency
    static let USDButton = "USDButton"
    static let AEDButton = "AEDButton"
    
    //Currency
    static let usDollar = "USD"
    static let inRupee = "INR"
}
